# poly-data

./: .gitignore  LICENSE  README.md  pyproject.toml  zensical.toml
docs/: generate_plots.py  getting-started.md  index.md  sports-coverage.md
docs/api/: clob.md  coverage.md  data-api.md  espn.md  gamma.md  http.md  index.md  io.md  markets.md
docs/examples/: espn-game-times.md  fetching-events.md  index.md  market-filtering.md  plotting.md  price-data.md
scripts/: generate_coverage_docs.py  test_all_slugs.py  test_slug.py  update_coverage.py
scripts/slug_plots/: slug_test_results.csv
src/poly_data/: __init__.py  _http.py  clob.py  coverage.py  coverage_data.json  data_api.py  espn.py  gamma.py  io.py  markets.py
tests/: test_basics.py  test_live.py
